# madthreading

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  README.md
examples/: CMakeLists.txt  Common.hh  ExternalBuild.cmake
examples/cuda/: CMakeLists.txt  advance_particles.cu  advance_particles.hpp  madcudathreading.cpp  particle.cu  particle.hpp  particle_simulator.cpp  particle_simulator.cu  particle_simulator.hpp  randomize.cpp  randomize.hpp  test.cu  threadMigration.cpp  thread_context.cpp  thread_context.hpp  thread_context_kernel.cu  v3.cu  v3.hpp
examples/cuda/common/: findgllib.mk
examples/ex1/: CMakeLists.txt  ex1.cc
examples/ex2/: CMakeLists.txt  ex2.cc
examples/ex3/: CMakeLists.txt  async.cc  async.py  ex3.cc  ex3a.cc  ex3b.cc
examples/ex4/: CMakeLists.txt  ex4.cc
examples/ex5/: CMakeLists.txt  ex5.cc
examples/ex6/: CMakeLists.txt  loop_simd.cc  omp_pi_loop.cc  omp_pi_spmd_final.cc  omp_pi_spmd_simple.cc  omp_pi_task.cc  pi_cxx11.cc  pi_lambda_serial.cc  pi_lambda_tbb.cc  pi_pthread_pool.cc  pi_pthread_pool_joiner.cc  pi_pthread_pool_joiner_1.cc  pi_pthread_pool_joiner_2.cc  pi_pthreads.cc  pi_serial.cc  pi_tbb.cc  pi_thread_pool.cc  pi_thread_pool_joiner_1.cc  pi_thread_pool_joiner_2.cc  pi_thread_pool_tree_1.cc  pi_thread_pool_tree_2.cc
examples/ex7/: CMakeLists.txt  async.cc  async.py  ex3a.cc
madthreading/: CMakeLists.txt  LICENSE.txt  config.hh  macros.hh  sources.cmake  types.hh  version.hh
madthreading/allocator/: aligned_allocator.cc  aligned_allocator.hh  allocator.hh  allocator_list.cc  allocator_list.hh  allocator_pool.cc  allocator_pool.hh  cache_line_size.hh  modules.cmake  sources.cmake
madthreading/atomics/: atomic.hh  atomic_array.hh  atomic_deque.hh  atomic_map.hh  atomic_typedefs.hh  modules.cmake  mutexed_pod.hh  omp_atomic.hh  sources.cmake
madthreading/atomics/details/: atomic_allocator_policy.hh  atomic_allocator_traits.hh  atomic_deque.tcc  atomic_deque_base.hh  atomic_deque_iterator.hh  modules.cmake  sources.cmake
madthreading/atomics/unit_test/: CMakeLists.txt  atomics_tester.cc
madthreading/threading/: auto_lock.hh  condition.cc  condition.hh  modules.cmake  mutex.hh  mutex_typedefs.hh  pythreading.cc  sources.cmake  template_auto_lock.hh  thread_manager.cc  thread_manager.hh  thread_pool.cc  thread_pool.hh  threading.cc  threading.hh  tls.hh
madthreading/threading/task/: modules.cmake  pytask.cc  sources.cmake  task.cc  task.hh  task_group.cc  task_group.hh  task_group.tcc  task_tree.hh  vtask.hh  vtask_group.cc  vtask_group.hh
madthreading/threading/task/cxx11-compat/: task.cc  task.hh  task_group.cc  task_group.hh  task_tree.hh
madthreading/threading/task/cxx98-compat/: task.cc  task.hh  task_group.cc  task_group.hh  task_tree.hh
madthreading/utility/: auto_timer.hh  base_timer.cc  constants.hh  fpe_detection.cc  fpe_detection.hh  memory.hh  modules.cmake  pyutility.cc  sources.cmake  timer.cc  timer.hh  timing_manager.hh  tools.hh
madthreading/vectorization/: array.cc  cov.cc  cov.hh  func.cc  func.hh  modules.cmake  sources.cmake
madthreading/vectorization/unit_test/: CMakeLists.txt  vectorization_tester.cc
source/: CMakeLists.txt  config.hh  exception.hh  fpe_detection.cc  macros.hh  memory.hh  sources.cmake  swig_defines.hh  timer.cc  timer.hh  types.hh  version.hh
source/allocator/: aligned_allocator.hh  allocator.cc  allocator.hh  allocator_list.cc  allocator_list.hh  allocator_pool.cc  allocator_pool.hh  cache.hh  cache_details.cc  cache_details.hh  cache_line_size.hh  modules.cmake  sources.cmake
source/atomics/: atomic.hh  atomic_map.hh  atomic_typedefs.hh  modules.cmake  mutexed_pod.hh  sources.cmake
source/atomics/details/: atomic_allocator_traits.hh  atomic_deque_base.hh  atomic_deque_iterator.hh  modules.cmake  sources.cmake
source/atomics/unit_test/: CMakeLists.txt  atomics_tester.cc
source/madthreading/: CMakeLists.txt  macros.hh  sources.cmake  types.hh  version.hh
source/madthreading/allocator/: aligned_allocator.hh  allocator.hh  allocator_list.cc  allocator_list.hh  allocator_pool.hh  cache_line_size.hh  sources.cmake
source/madthreading/atomics/: atomic.hh  atomic_typedefs.hh  sources.cmake
source/madthreading/atomics/unit_test/: CMakeLists.txt  UnitTest.hh  atomics_tester.cc
source/madthreading/threading/: auto_lock.hh  condition.hh  modules.cmake  mutex.hh  pythreading.cc  sources.cmake  thread_manager.cc  thread_manager.hh  thread_pool.cc  thread_pool.hh  threading.cc  threading.hh  tls.hh
source/madthreading/threading/task/: modules.cmake  pytask.cc  sources.cmake  task.hh  task_group.hh  task_group.tcc  vtask.cc  vtask.hh  vtask_group.cc  vtask_group.hh
source/madthreading/utility/: base_clock.hh  base_timer.hh  exception.cc  fpe_detection.cc  fpe_detection.hh  memory.hh  modules.cmake  pyutility.cc  sources.cmake  timer.cc  timing_manager.cc
source/madthreading/vectorization/: array.cc  cov.cc  func.cc  func.hh  modules.cmake  sources.cmake  vectorization_typedefs.hh
source/madthreading/vectorization/unit_test/: CMakeLists.txt
source/threading/: AutoLock.hh  TemplateAutoLock.hh  allocator.hh  auto_lock.hh  condition.cc  condition.hh  joining_task.hh  modules.cmake  mutex.hh  mutex_typedefs.hh  sources.cmake  task.cc  task.hh  task_tree.hh  template_auto_lock.hh  thread.hh  thread_manager.cc  thread_manager.hh  thread_pool.cc  thread_pool.hh  threading.cc  threading.hh  tls.hh
source/threading/atomics/: atomic.hh  atomic_array.hh  atomic_deque.hh  atomic_map.hh  atomic_typedefs.hh  modules.cmake  mutexed_pod.hh  omp_atomic.hh  sources.cmake
source/threading/atomics/details/: atomic_allocator.hh  atomic_allocator_policy.hh  atomic_allocator_traits.hh  atomic_deque.tcc  sources.cmake  (+3 more)
source/threading/task/: joining_task.hh  sources.cmake  task.cc  task.hh  task_group.hh  task_tree.hh
source/utility/: exception.cc  fpe_detection.hh  memory.cc  memory.hh  sources.cmake  timer.cc  tools.hh
source/vectorization/: array.cc  array.hh  func.cc  func.hh  modules.cmake  sources.cmake  vectorization_typedefs.hh
(+68 files in other folders)
